# iset3d

./: README.md  pyproject.toml
examples/: pi_intro_camera.py  simple_render.py
iset3d/: __init__.py  pbrt_wrapper.py  recipe.py
python/: README.md  __init__.py  docker_wrapper.py  pbrt_wrapper.py  recipe.py  utils.py
python/tests/: test_examples.py  test_intro_camera.py  test_pbrt_wrapper.py  test_recipe.py
