[build-system]
requires = ["setuptools>=61", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "iset3d"
version = "0.1.0"
description = "Utilities for ISET3D and PBRT"
authors = [{name = "ISET3D Team"}]
license = {text = "MIT"}
dependencies = [
    "numpy",
    "scipy",
    "imageio",
]

[tool.setuptools.packages.find]
where = ["."]

