[build-system]
requires = ["setuptools>=61", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "iset3d"
version = "0.1.0"
description = "Utilities for ISET3D and PBRT"
authors = [{name = "ISET3D Team"}]
license = {text = "MIT"}
requires-python = ">=3.8"
# This project has no mandatory Python dependencies.  The previous
# configuration listed packages like NumPy, SciPy and ImageIO, but none of
# them are actually imported in the ``iset3d`` package or the example
# scripts.  Removing these unused dependencies keeps the installation
# lightweight and avoids pulling in large libraries unnecessarily.
dependencies = []

[tool.setuptools.packages.find]
where = ["."]
exclude = [
    "data*",
    "examples*",
]

[tool.setuptools.package-data]
"" = [
    "data/scenes/SimpleScene/**",
    "data/scenes/MacBethChecker/**",
    "data/scenes/CornellBoxReference/**",
    "data/scenes/testplane/dgauss.22deg.3.0mm.json",
]

